# gitlab-notifications

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  content.html  example.env  pyproject.toml  send_email.py  template.html
utils/: email_client.py  settings.py
