[tool.poetry]
name = "gitlab_notifications"
version = "0.1.0"
description = ""
authors = ["Rafał Górski <r.gorski@satrev.space>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
python-gitlab = "^3.15.0"
pydantic-settings = "^2.0.3"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.5.0"
black = "^23.10.0"
mypy = "^1.6.1"
flake8 = "^6.1.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
line_length = 119
profile = "black"

[tool.black]
line-length = 119
